// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Class Methods _orderify: Results in the Correct Order 1`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [],
                "name": "Description",
                "type": "element",
              },
              Object {
                "elements": Array [],
                "name": "DataTypes",
                "type": "element",
              },
              Object {
                "elements": Array [],
                "name": "Tags",
                "type": "element",
              },
              Object {
                "elements": Array [],
                "name": "Trends",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addProgram: Adds Program to Document Instance 1`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": "true",
          "ExportDate": "Tue Aug 29 09:06:17 2017",
          "ExportOptions": "References NoRawData L5KData DecoratedData Context Dependencies ForceProtectedEncoding AllProjDocTrans",
          "Owner": "Operator",
          "SchemaRevision": "1.0",
          "SoftwareRevision": "28.00",
          "TargetName": "PB_OneButton",
          "TargetType": "DataType",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Name": "TRW_10673_Final",
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "attributes": Object {
                  "Use": "Context",
                },
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "User",
                      "Family": "NoFamily",
                      "Name": "PB_OneButton",
                      "Use": "Target",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "DataType": "SINT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "true",
                              "Name": "ZZZZZZZZZZPB_OneButt0",
                              "Radix": "Decimal",
                            },
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "0",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Push",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "1",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "State",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "2",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Visibility",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "3",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Ind",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "4",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Interlock",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "5",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "ONS",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "DataType": "TIMER",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Tmr",
                              "Radix": "NullType",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                        ],
                        "name": "Members",
                        "type": "element",
                      },
                    ],
                    "name": "DataType",
                    "type": "element",
                  },
                ],
                "name": "DataTypes",
                "type": "element",
              },
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "cProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addProgram: Adds Program to Document Instance 2`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "cProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addProgram: Adds Program to Document Instance 3`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "cProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "dProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addProgram: Adds Program to Document Instance 4`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "cProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "dProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "aRoutine",
                              "Type": "RLL",
                              "Use": "Context",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addTag: Adds Tag to Document Instance 1`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": "true",
          "ExportDate": "Tue Aug 29 09:06:17 2017",
          "ExportOptions": "References NoRawData L5KData DecoratedData Context Dependencies ForceProtectedEncoding AllProjDocTrans",
          "Owner": "Operator",
          "SchemaRevision": "1.0",
          "SoftwareRevision": "28.00",
          "TargetName": "PB_OneButton",
          "TargetType": "DataType",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Name": "TRW_10673_Final",
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "attributes": Object {
                  "Use": "Context",
                },
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "User",
                      "Family": "NoFamily",
                      "Name": "PB_OneButton",
                      "Use": "Target",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "DataType": "SINT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "true",
                              "Name": "ZZZZZZZZZZPB_OneButt0",
                              "Radix": "Decimal",
                            },
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "0",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Push",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "1",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "State",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "2",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Visibility",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "3",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Ind",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "4",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Interlock",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "5",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "ONS",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "DataType": "TIMER",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Tmr",
                              "Radix": "NullType",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                        ],
                        "name": "Members",
                        "type": "element",
                      },
                    ],
                    "name": "DataType",
                    "type": "element",
                  },
                ],
                "name": "DataTypes",
                "type": "element",
              },
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addTag: Adds Tag to Document Instance 2`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addTag: Adds Tag to Document Instance 3`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": "true",
          "ExportDate": "Tue Aug 29 09:06:17 2017",
          "ExportOptions": "References NoRawData L5KData DecoratedData Context Dependencies ForceProtectedEncoding AllProjDocTrans",
          "Owner": "Operator",
          "SchemaRevision": "1.0",
          "SoftwareRevision": "28.00",
          "TargetName": "PB_OneButton",
          "TargetType": "DataType",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Name": "TRW_10673_Final",
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "attributes": Object {
                  "Use": "Context",
                },
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "User",
                      "Family": "NoFamily",
                      "Name": "PB_OneButton",
                      "Use": "Target",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "DataType": "SINT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "true",
                              "Name": "ZZZZZZZZZZPB_OneButt0",
                              "Radix": "Decimal",
                            },
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "0",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Push",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "1",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "State",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "2",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Visibility",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "3",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Ind",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "4",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Interlock",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "BitNumber": "5",
                              "DataType": "BIT",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "ONS",
                              "Radix": "Decimal",
                              "Target": "ZZZZZZZZZZPB_OneButt0",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                          Object {
                            "attributes": Object {
                              "DataType": "TIMER",
                              "Dimension": "0",
                              "ExternalAccess": "Read/Write",
                              "Hidden": "false",
                              "Name": "Tmr",
                              "Radix": "NullType",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [
                                  Object {
                                    "cdata": "*",
                                    "type": "cdata",
                                  },
                                ],
                                "name": "Description",
                                "type": "element",
                              },
                            ],
                            "name": "Member",
                            "type": "element",
                          },
                        ],
                        "name": "Members",
                        "type": "element",
                      },
                    ],
                    "name": "DataType",
                    "type": "element",
                  },
                ],
                "name": "DataTypes",
                "type": "element",
              },
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "Name": "tag2",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addTag: Adds Tag to Document Instance 4`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "Name": "tag2",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addTag: Adds Tag to Document Instance 5`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "Name": "tag2",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "SINT",
                      "Name": "tag3",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addTag: Adds Tag to Document Instance 6`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "Name": "tag2",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "SINT",
                      "Name": "tag3",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "REAL",
                      "Name": "tag4",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods addTag: Adds Tag to Document Instance 7`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "tag1",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "Name": "tag2",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "SINT",
                      "Name": "tag3",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "REAL",
                      "Name": "not_tag4Anymore",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findProgram: Finds Target Program 1`] = `
Program {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "Name": "aProgram",
      "Type": "Normal",
      "Use": "Context",
    },
    "elements": Array [],
    "name": "Program",
    "type": "element",
  },
  "class_id": "bacac87817ce803505fcdfaf4360dc50",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findProgram: Finds Target Program 2`] = `
Program {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "Name": "bProgram",
      "Type": "Normal",
      "Use": "Context",
    },
    "elements": Array [],
    "name": "Program",
    "type": "element",
  },
  "class_id": "bacac87817ce803505fcdfaf4360dc50",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findProgram: Finds Target Program 3`] = `
Program {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "Name": "cProgram",
      "Type": "Normal",
      "Use": "Context",
    },
    "elements": Array [],
    "name": "Program",
    "type": "element",
  },
  "class_id": "bacac87817ce803505fcdfaf4360dc50",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findProgram: Finds Target Program 4`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "eProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findProgram: Finds Target Program 5`] = `
Program {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "Name": "eProgram",
      "Type": "Normal",
      "Use": "Context",
    },
    "elements": Array [],
    "name": "Program",
    "type": "element",
  },
  "class_id": "bacac87817ce803505fcdfaf4360dc50",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findTag: Finds Target Tag 1`] = `
Tag {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "DataType": "DINT",
      "Name": "aTag",
      "TagType": "Base",
    },
    "elements": Array [],
    "name": "Tag",
    "type": "element",
  },
  "class_id": "202108c6004705df7b5fd0add930619f",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findTag: Finds Target Tag 2`] = `
Tag {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "DataType": "SINT",
      "Name": "bTag",
      "TagType": "Base",
    },
    "elements": Array [],
    "name": "Tag",
    "type": "element",
  },
  "class_id": "202108c6004705df7b5fd0add930619f",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findTag: Finds Target Tag 3`] = `
Tag {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "DataType": "BOOL",
      "Name": "cTag",
      "TagType": "Base",
    },
    "elements": Array [],
    "name": "Tag",
    "type": "element",
  },
  "class_id": "202108c6004705df7b5fd0add930619f",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findTag: Finds Target Tag 4`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "DINT",
                      "Name": "aTag",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "SINT",
                      "Name": "bTag",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "DataType": "BOOL",
                      "Name": "eTag",
                      "TagType": "Base",
                    },
                    "elements": Array [],
                    "name": "Tag",
                    "type": "element",
                  },
                ],
                "name": "Tags",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods findTag: Finds Target Tag 5`] = `
Tag {
  "_dom": Object {
    "attributes": Object {
      "Class": "Standard",
      "DataType": "BOOL",
      "Name": "eTag",
      "TagType": "Base",
    },
    "elements": Array [],
    "name": "Tag",
    "type": "element",
  },
  "class_id": "202108c6004705df7b5fd0add930619f",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods setTarget: Sets Target Successfully 1`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
          "TargetName": "aProgram",
          "TargetType": "Program",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Target",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "aRoutine",
                              "Type": "RLL",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "bRoutine",
                              "Type": "RLL",
                              "Use": "Context",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods setTarget: Sets Target Successfully 2`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
          "TargetName": "bProgram",
          "TargetType": "Program",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "aRoutine",
                              "Type": "RLL",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Target",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "bRoutine",
                              "Type": "RLL",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods setTarget: Sets Target Successfully 3`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
          "TargetName": "aRoutine",
          "TargetType": "Routine",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "aRoutine",
                              "Type": "RLL",
                              "Use": "Target",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "bRoutine",
                              "Type": "RLL",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class Methods setTarget: Sets Target Successfully 4`] = `
Document {
  "_dom": Object {
    "declaration": Object {
      "attributes": Object {
        "encoding": "UTF-8",
        "standalone": "yes",
        "version": "1.0",
      },
    },
    "elements": Array [
      Object {
        "attributes": Object {
          "ContainsContext": true,
          "SchemaRevision": "1.0",
          "TargetName": "bRoutine",
          "TargetType": "Routine",
        },
        "elements": Array [
          Object {
            "attributes": Object {
              "Use": "Context",
            },
            "elements": Array [
              Object {
                "elements": Array [
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "aProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "aRoutine",
                              "Type": "RLL",
                              "Use": "Context",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                  Object {
                    "attributes": Object {
                      "Class": "Standard",
                      "Name": "bProgram",
                      "Type": "Normal",
                      "Use": "Context",
                    },
                    "elements": Array [
                      Object {
                        "elements": Array [
                          Object {
                            "attributes": Object {
                              "Name": "bRoutine",
                              "Type": "RLL",
                              "Use": "Target",
                            },
                            "elements": Array [
                              Object {
                                "elements": Array [],
                                "name": "RLLContent",
                                "type": "element",
                              },
                            ],
                            "name": "Routine",
                            "type": "element",
                          },
                        ],
                        "name": "Routines",
                        "type": "element",
                      },
                    ],
                    "name": "Program",
                    "type": "element",
                  },
                ],
                "name": "Programs",
                "type": "element",
              },
            ],
            "name": "Controller",
            "type": "element",
          },
        ],
        "name": "RSLogix5000Content",
        "type": "element",
      },
    ],
  },
  "class_id": "0bd80ec94271dabcd82c885784e63409",
  "elem_id": "33cb4159377b63ce9db11667160e39df",
}
`;

exports[`Document Class New Instance Initializes with Desired Document Model 1`] = `
Object {
  "declaration": Object {
    "attributes": Object {
      "encoding": "UTF-8",
      "standalone": "yes",
      "version": "1.0",
    },
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "ContainsContext": true,
        "SchemaRevision": "1.0",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Use": "Context",
          },
          "elements": Array [],
          "name": "Controller",
          "type": "element",
        },
      ],
      "name": "RSLogix5000Content",
      "type": "element",
    },
  ],
}
`;

exports[`Document Class New Instance Initializes with Desired Document Model 2`] = `
Object {
  "declaration": Object {
    "attributes": Object {
      "encoding": "UTF-8",
      "standalone": "yes",
      "version": "1.0",
    },
  },
  "elements": Array [
    Object {
      "attributes": Object {
        "ContainsContext": "true",
        "ExportDate": "Tue Aug 29 09:06:17 2017",
        "ExportOptions": "References NoRawData L5KData DecoratedData Context Dependencies ForceProtectedEncoding AllProjDocTrans",
        "Owner": "Operator",
        "SchemaRevision": "1.0",
        "SoftwareRevision": "28.00",
        "TargetName": "PB_OneButton",
        "TargetType": "DataType",
      },
      "elements": Array [
        Object {
          "attributes": Object {
            "Name": "TRW_10673_Final",
            "Use": "Context",
          },
          "elements": Array [
            Object {
              "attributes": Object {
                "Use": "Context",
              },
              "elements": Array [
                Object {
                  "attributes": Object {
                    "Class": "User",
                    "Family": "NoFamily",
                    "Name": "PB_OneButton",
                    "Use": "Target",
                  },
                  "elements": Array [
                    Object {
                      "elements": Array [
                        Object {
                          "attributes": Object {
                            "DataType": "SINT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "true",
                            "Name": "ZZZZZZZZZZPB_OneButt0",
                            "Radix": "Decimal",
                          },
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "0",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Push",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "1",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "State",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "2",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Visibility",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "3",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Ind",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "4",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Interlock",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "BitNumber": "5",
                            "DataType": "BIT",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "ONS",
                            "Radix": "Decimal",
                            "Target": "ZZZZZZZZZZPB_OneButt0",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                        Object {
                          "attributes": Object {
                            "DataType": "TIMER",
                            "Dimension": "0",
                            "ExternalAccess": "Read/Write",
                            "Hidden": "false",
                            "Name": "Tmr",
                            "Radix": "NullType",
                          },
                          "elements": Array [
                            Object {
                              "elements": Array [
                                Object {
                                  "cdata": "*",
                                  "type": "cdata",
                                },
                              ],
                              "name": "Description",
                              "type": "element",
                            },
                          ],
                          "name": "Member",
                          "type": "element",
                        },
                      ],
                      "name": "Members",
                      "type": "element",
                    },
                  ],
                  "name": "DataType",
                  "type": "element",
                },
              ],
              "name": "DataTypes",
              "type": "element",
            },
          ],
          "name": "Controller",
          "type": "element",
        },
      ],
      "name": "RSLogix5000Content",
      "type": "element",
    },
  ],
}
`;
